# liri-calculator

./: .gitignore  CMakeLists.txt  README.md  liri-calculator  liri-calculator.pro  papyros-calculator-0.1-setup.exe.REMOVED.git-id  papyros-calculator-0.1.1-portable-win.zip.REMOVED.git-id  papyros-calculator-0.1.1-setup-win.exe.REMOVED.git-id  papyros-calculator-windows.zip.REMOVED.git-id  papyros-calculator.pro  qrc_liri-calculator.cpp
data/: me.liriproject.Calculator.appdata.xml  me.liriproject.Calculator.desktop
papyros-calculator.app/Contents/: Info.plist
src/: CMakeLists.txt  main.cpp  papyros-calculator.qrc
src/qml/: main.qml
